--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,6 @@
         "sourceMap": false
     },
     "exclude": [
-        "src/**/__tests__/*.{ts,tsx}",
         "node_modules",
         "dist"
     ],
@@ -18,6 +17,7 @@
         "typings/**/*.ts"
     ],
     "files": [
+        "src/__tests__/validation-test.ts",
         "src/index.ts",
         "src/result.ts",
         "src/rules/index.ts",
