--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,23 @@
-typings/
-tmp/
-node_modules/
+.settings
+*.class
+*.project
+*.orig
+**/.classpath
+**/.factorypath
+**/.springBeans
+
 lib/
-dist/**/__tests__/**
+target/
+
+**/node_modules
+**/coverage
+**/npm-debug.log
+**/bower_components
+**/target
+**/node
+**/build
+**/typings
+
+**/logs
+*.log
+
