--- a/package.json
+++ b/package.json
@@ -1,30 +1,28 @@
 {
-  "name": "bridge-validation.js",
-  "version": "0.0.2",
-  "description": "",
-  "main": "dist/index.js",
-  "typings": "dist/index",
-  "scripts": {
-    "prepublish": "gulp typescript",
-    "test": "gulp test"
-  },
+  "name": "validation.js",
+  "version": "0.0.5",
+  "description": "Shared validators for server and client",
+  "main": "lib/index.js",
+  "typings": "lib/index",
+  "scripts": {},
   "author": "Bridge",
   "license": "ISC",
+  "publishConfig": {
+    "registry": "http://nexus.bridge.ufsc.br/content/repositories/npm-private/"
+  },
   "devDependencies": {
     "browserify": "^12.0.1",
     "del": "^2.0.2",
     "gulp": "^3.9.0",
-    "gulp-mocha": "^2.1.3",
-    "gulp-typescript": "^2.9.2",
-    "merge2": "^0.3.6",
-    "typescript": "^1.6.2",
-    "vinyl-source-stream": "^1.1.0",
-    "ts-node": "^0.5.5"
+    "gulp-babel": "6.1.2",
+    "babel-plugin-transform-object-assign": "6.22.0",
+    "babel-preset-es2015": "6.18.0",
+    "babel-preset-react": "6.16.0",
+    "babel-preset-stage-0": "6.16.0",
+    "vinyl-source-stream": "^1.1.0"
   },
-  "peerDependencies": {
-
-  },
-  "publishConfig" : {
-    "registry" : "http://nexus.bridge.ufsc.br/content/repositories/npm-private/"
+  "dependencies": {
+    "immutable": "3.8.1",
+    "moment": "2.17.1"
   }
 }
