--- a/pom.xml
+++ b/pom.xml
@@ -8,18 +8,27 @@
 	<name>Bridge Platform - Validation</name>
 
 	<properties>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>1.8</maven.compiler.source>
+
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+		<!-- Frontend -->
+		<node.version>v7.5.0</node.version>
+		<npm.version>4.1.2</npm.version>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
+			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>br.ufsc.bridge</groupId>
 			<artifactId>metafy</artifactId>
+			<version>0.0.10</version>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
@@ -34,7 +43,7 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>${jackson.version}</version>
+			<version>2.8.3</version>
 		</dependency>
 	</dependencies>
 
