--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,16 @@
 **/.springBeans
 
 lib/
+
 target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
 
 **/node_modules
 **/coverage
