--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,17 @@
 					</execution>
 
 					<execution>
+						<id>npm version patch</id>
+						<phase>deploy</phase>
+						<goals>
+							<goal>npm</goal>
+						</goals>
+						<configuration>
+							<arguments>version --no-git-tag-version @{project.version}</arguments>
+						</configuration>
+					</execution>
+
+					<execution>
 						<id>npm publish</id>
 						<phase>deploy</phase>
 						<goals>
