--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "validation.js",
+  "name": "@bridge/validation.js",
   "version": "0.0.10",
   "description": "Shared validators for server and client",
   "main": "lib/index.js",
