--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "validation.js",
-  "version": "0.0.12",
+  "name": "bridge-validation",
+  "version": "0.0.11",
   "description": "Shared validators for server and client",
   "main": "lib/index.js",
   "typings": "lib/index",
