--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,15 @@
-// Place your settings in this file to overwrite default and user settings.
 {
     "editor.formatOnSave": true,
     "editor.tabSize": 4,
-    "vsicons.presets.angular": false
+    "files.insertFinalNewline": true,
+    "tsimporter.emitSemicolon": false,
+    "tsimporter.noStatusBar": true,
+    "vsicons.presets.angular": false,
+    "typescript.tsdk": "./node_modules/typescript/lib",
+    "editor.renderIndentGuides": false,
+    "tslint.jsEnable": true,
+    "tslint.autoFixOnSave": true,
+    "typescript.useCodeSnippetsOnMethodSuggest": true,
+    "emmet.showAbbreviationSuggestions": false,
+    "emmet.showExpandedAbbreviation": "never"
 }
