--- a/package.json
+++ b/package.json
@@ -1,28 +1,33 @@
 {
   "name": "bridge-validation",
-  "version": "0.0.14",
+  "version": "1.0.0-alpha.1",
   "description": "Shared validators for server and client",
   "main": "lib/index.js",
-  "typings": "lib/index",
-  "scripts": {},
+  "types": "lib/index",
   "author": "Bridge",
   "license": "ISC",
   "publishConfig": {
     "registry": "http://nexus.bridge.ufsc.br/content/repositories/npm-private/"
   },
+  "scripts": {
+    "clean": "shx rm -rf _bundles lib",
+    "build": "npm run clean && tsc && webpack --progress",
+    "lint": "tslint -p tsconfig.json"
+  },
   "devDependencies": {
-    "browserify": "^12.0.1",
-    "del": "^2.0.2",
-    "gulp": "^3.9.0",
-    "gulp-babel": "6.1.2",
+    "awesome-typescript-loader": "3.2.3",
     "babel-plugin-transform-object-assign": "6.22.0",
     "babel-preset-es2015": "6.18.0",
     "babel-preset-react": "6.16.0",
     "babel-preset-stage-0": "6.16.0",
-    "vinyl-source-stream": "^1.1.0"
+    "moment": "2.17.1",
+    "shx": "0.2.2",
+    "tslint": "5.8.0",
+    "typescript": "2.6.2",
+    "vinyl-source-stream": "^1.1.0",
+    "webpack": "3.5.5"
   },
-  "dependencies": {
-    "immutable": "3.8.1",
-    "moment": "2.17.1"
+  "peerDependencies": {
+    "moment": "2.x"
   }
 }
