--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>br.ufsc.bridge</groupId>
 	<artifactId>validation</artifactId>
-	<version>0.0.16-SNAPSHOT</version>
+	<version>1.0.0-SNAPSHOT</version>
 	<name>Bridge Platform - Validation</name>
 
 	<properties>
@@ -79,10 +79,13 @@
 					</execution>
 
 					<execution>
-						<id>gulp build</id>
+						<id>npm build</id>
 						<goals>
-							<goal>gulp</goal>
+							<goal>npm</goal>
 						</goals>
+						<configuration>
+							<arguments>run build</arguments>
+						</configuration>
 					</execution>
 
 					<execution>
@@ -117,7 +120,7 @@
 		</plugins>
 		<resources>
 			<resource>
-				<directory>lib/</directory>
+				<directory>_bundles/</directory>
 			</resource>
 		</resources>
 	</build>
