[maven-release-plugin] prepare release 1.0.4

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>br.ufsc.bridge</groupId>
 	<artifactId>validation</artifactId>
-	<version>1.0.4-SNAPSHOT</version>
+	<version>1.0.4</version>
 	<name>Bridge Platform - Validation</name>
 
 	<properties>
@@ -141,6 +141,6 @@
 		<connection>scm:git:git@github.com:laboratoriobridge/validation.git</connection>
 		<url>scm:git:git@github.com:laboratoriobridge/validation.git</url>
 		<developerConnection>scm:git:git@github.com:laboratoriobridge/validation.git</developerConnection>
-		<tag>HEAD</tag>
+		<tag>1.0.4</tag>
 	</scm>
 </project>
