--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,17 @@
 							<arguments>run build</arguments>
 						</configuration>
 					</execution>
+					
+					<execution>
+						<id>npm version</id>
+						<phase>deploy</phase>
+						<goals>
+							<goal>npm version</goal>
+						</goals>
+						<configuration>
+							<arguments>${project.version}</arguments>
+						</configuration>
+					</execution>
 
 					<execution>
 						<id>npm publish</id>
