--- a/pom.xml
+++ b/pom.xml
@@ -149,9 +149,9 @@
 	</distributionManagement>
 
 	<scm>
-		<connection>scm:git:git@github.com:laboratoriobridge/validation.git</connection>
-		<url>scm:git:git@github.com:laboratoriobridge/validation.git</url>
-		<developerConnection>scm:git:git@github.com:laboratoriobridge/validation.git</developerConnection>
-		<tag>HEAD</tag>
+		<connection>scm:git:git@github.com:CarlosBonetti/validation.git</connection>
+		<url>scm:git:git@github.com:CarlosBonetti/validation.git</url>
+		<developerConnection>scm:git:git@github.com:CarlosBonetti/validation.git</developerConnection>
+		<tag>1.0.6</tag>
 	</scm>
 </project>
