--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>br.ufsc.bridge</groupId>
 	<artifactId>validation</artifactId>
-	<version>1.0.6-SNAPSHOT</version>
+	<version>1.0.22</version>
 	<name>Bridge Platform - Validation</name>
 
 	<properties>
@@ -152,6 +152,6 @@
 		<connection>scm:git:git@github.com:CarlosBonetti/validation.git</connection>
 		<url>scm:git:git@github.com:CarlosBonetti/validation.git</url>
 		<developerConnection>scm:git:git@github.com:CarlosBonetti/validation.git</developerConnection>
-		<tag>1.0.6</tag>
+		<tag>1.0.22</tag>
 	</scm>
 </project>
