--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bridge-validation",
-  "version": "1.0.9-SNAPSHOT",
+  "version": "1.0.9",
   "description": "Shared validators for server and client",
   "main": "lib/index.js",
   "types": "lib/index",
