--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>br.ufsc.bridge</groupId>
 	<artifactId>validation</artifactId>
-	<version>1.0.9</version>
+	<version>1.0.10-SNAPSHOT</version>
 	<name>Bridge Platform - Validation</name>
 
 	<properties>
@@ -163,6 +163,6 @@
 		<connection>scm:git:git@github.com:laboratoriobridge/validation.git</connection>
 		<url>scm:git:git@github.com:laboratoriobridge/validation.git</url>
 		<developerConnection>scm:git:git@github.com:laboratoriobridge/validation.git</developerConnection>
-		<tag>1.0.9</tag>
+		<tag>HEAD</tag>
 	</scm>
 </project>
