--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "Bridge",
   "license": "ISC",
   "publishConfig": {
-    "registry": "http://nexus.bridge.ufsc.br/content/repositories/npm-private/"
+    "registry": "https://repositorio.bridge.ufsc.br/repository/npm-private/"
   },
   "scripts": {
     "clean": "shx rm -rf _bundles lib",
