--- a/pom.xml
+++ b/pom.xml
@@ -157,11 +157,11 @@
     <repository>
       <id>releases</id>
       <name>Internal Releases</name>
-      <url>http://nexus.bridge.ufsc.br/content/repositories/releases</url>
+      <url>https://repositorio.bridge.ufsc.br/repository/releases/</url>
     </repository>
     <snapshotRepository>
       <id>snapshots</id>
-      <url>http://nexus.bridge.ufsc.br/content/repositories/snapshots</url>
+      <url>https://repositorio.bridge.ufsc.br/repository/snapshots/</url>
     </snapshotRepository>
   </distributionManagement>
 
