--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,8 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
     <!-- Frontend -->
-    <node.version>v8.9.4</node.version>    
+    <node.version>v8.9.4</node.version>
+    <npm.version>5.6.0</npm.version>
     <yarn.version>v1.3.2</yarn.version>
   </properties>
 
