--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,16 @@
               <arguments>install</arguments>
             </configuration>
           </execution>
+          
+          <execution>
+            <id>yarn test</id>
+            <goals>
+              <goal>yarn</goal>
+            </goals>
+            <configuration>
+              <arguments>test</arguments>
+            </configuration>
+          </execution>
 
           <execution>
             <id>yarn build</id>
@@ -98,7 +108,7 @@
             <configuration>
               <arguments>run build</arguments>
             </configuration>
-          </execution>
+          </execution>          
 
           <execution>
             <id>yarn-version</id>
