--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test": "jest"
   },
   "devDependencies": {
-    "@types/jest": "^22.2.3",
+    "@types/jest": "22.2.3",
     "awesome-typescript-loader": "3.2.3",
     "babel-plugin-transform-object-assign": "6.22.0",
     "babel-preset-es2015": "6.18.0",
