--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>br.ufsc.bridge</groupId>
     <artifactId>validation</artifactId>
-    <version>1.4.4</version>
+    <version>1.4.5-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Bridge Platform - Validation</name>
