--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -2,7 +2,7 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: '*'
+    branches: master
   pull_request:
     branches: '*'
 
@@ -25,4 +25,4 @@ jobs:
     - name: Build with Maven
       run: mvn clean verify
 
-    # TODO: readme + codecov + remover travis
+    # TODO: readme + codecov
