--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -12,16 +12,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    
-    # TODO: USAR CACHE?
+    - uses: actions/checkout@v2  
     
     - name: Set up JDK 8
       uses: actions/setup-java@v2
       with:
         java-version: '8'
         distribution: 'zulu'
-        
+            
+    - name: Cache local Maven repository
+      uses: actions/cache@v2
+      with:
+        path: ~/.m2/
+        key: ${{ runner.os }}-maven-${{ hashFiles('pom.xml') }} 
+    
     - name: Build with Maven
       run: mvn clean verify
 
