--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,14 +21,11 @@ jobs:
           # The private key to sign artifacts. Will be imported into the GPG keychain of runner
           gpg-private-key: ${{ secrets.MVN_RELEASE_GPG_PRIVATE_KEY }}
           gpg-passphrase: MVN_RELEASE_GPG_PASSPHRASE
-          
-      - name: Compile
-        run: mvn -B package 
       
       - name: Prepare the release
         env:
           MVN_RELEASE_GPG_PASSPHRASE: ${{ secrets.MVN_RELEASE_GPG_PASSPHRASE }}
-        run: mvn release:prepare -X -Possrh
+        run: mvn release:prepare -X --no-tty -Possrh
   
       - name: Push the release to Maven Central
         env:
