--- a/pom.xml
+++ b/pom.xml
@@ -277,7 +277,7 @@
 
     <scm>
         <connection>scm:git:ssh@github.com:laboratoriobridge/validation.git</connection>
-        <url>scm:git:git@github.com:laboratoriobridge/validation.git</url>
+        <url>scm:git:ssh@github.com:laboratoriobridge/validation.git</url>
         <developerConnection>scm:git:ssh@github.com:laboratoriobridge/validation.git</developerConnection>
         <tag>1.4.4</tag>
     </scm>
