--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v2
         with:
-            token: ${{ secrets.GITHUB_TOKEN }}
+            token: ${{ secrets.RELEASE_TOKEN }}
 
         
       
