Change push method for release

--- a/pom.xml
+++ b/pom.xml
@@ -275,10 +275,10 @@
         </profile>
     </profiles>
 
-    <scm>
-        <connection>scm:git:https://github.com/laboratoriobridge/validation.git</connection>
-        <url>scm:git:https://github.com/laboratoriobridge/validation.git</url>
-        <developerConnection>scm:git:https://github.com/laboratoriobridge/validation.git</developerConnection>
-        <tag>1.4.4</tag>
+   <scm>
+        <connection>scm:git:git@github.com:laboratoriobridge/validation.git</connection>
+        <url>scm:git:git@github.com:laboratoriobridge/validation.git</url>
+        <developerConnection>scm:git:git@github.com:laboratoriobridge/validation.git</developerConnection>
+        <tag>HEAD</tag>
     </scm>
 </project>
